--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -2,9 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Page not found | Simpler application</title>
+    <title>Show | Simpler application</title>
   </head>
   <body>
-    <h1>Page not found</h1>
+    <h1>Test</h1>
+
+    <p><%= @id %></p>    
   </body>
 </html>
